Fixed Dark Mode and toggle switch bugs

--- a/Triton/src/app/home/home.page.scss
+++ b/Triton/src/app/home/home.page.scss
@@ -96,8 +96,6 @@ ion-button {
 
 .navButtons {
   margin: 0;
-  background-color: var(--navbuttons);
-  transition: 1s;
   max-width: 15%;
   width: 112px; /* Ensure the width is fixed */
   border-radius: 0em 5em 5em 0em;
@@ -125,7 +123,7 @@ ion-button {
   max-width: 85%; /* Limit the width to 55% of the screen */
   box-sizing: border-box; /* Include padding and border in the element's total width and height */
   padding-top: 3em;
-  padding-bottom: 1em;
+  padding-bottom: 3em;
 }
 
 //Optional code for making the breadcrumb scrollbar hidden
@@ -137,7 +135,6 @@ ion-button {
   margin-right: 0.5em;
   color: var(--text-color);
   display: inline-block;
-  transition: 0.5s;
   cursor: pointer;
 }
 
@@ -145,7 +142,6 @@ ion-button {
   margin-right: 0.5em;
   color: var(--text-color);
   display: inline-block;
-  transition: 0.5s;
   cursor: default;
 }
 
