--- a/Triton/src/theme/variables.scss
+++ b/Triton/src/theme/variables.scss
@@ -17,5 +17,5 @@
   --table-background: var(--ion-color-dark-tint);
   --text-color: var(--ion-color-light);
   --content-table-title: var(--ion-color-light); 
-  --content-table-description: var(--ion-color-medium);
+  --content-table-description: var(--ion-color-medium-tint);
 }
